# Memory_Layer

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  README.md  cursor_commit_tmp.sh  pyproject.toml  requirements.txt  run_web_local.py  vercel.json
api/: index.py
echo_journal/: __init__.py  index.html  logic.py  server.py
examples/: demo_agent.py  quickstart.py
memlayer/: __init__.py  cli.py  config.py  consolidation.py  core.py  embeddings.py  extraction.py  llm.py  middleware.py  models.py  privacy.py  reflection.py  retrieval.py
memlayer/storage/: __init__.py  base.py  sqlite_store.py  supabase_store.py
memlayer/ui/: __init__.py  index.html  server.py
public/: index.html
supabase/: schema.sql
tests/: conftest.py  test_advanced.py  test_cli.py  test_core.py  test_echo.py  test_middleware.py  test_retrieval.py  test_storage.py  test_supabase_store.py  test_ui.py
