[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memlayer"
version = "0.1.0"
description = "Persistent episodic + semantic memory middleware for LLM agents, powered by the Gemini API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sachin K" }]
keywords = ["llm", "memory", "agents", "gemini", "rag", "middleware"]
dependencies = [
    "google-genai>=1.0.0",
    "numpy>=1.26",
    # Required by SupabaseMemoryStore and the Vercel deployment. Declared
    # here (not just requirements.txt) because Vercel's Python builder
    # installs from pyproject.toml when one exists at the project root.
    "supabase>=2.4",
]

[project.scripts]
memlayer = "memlayer.cli:main"
echo-journal = "echo_journal.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["memlayer*", "echo_journal*"]

[tool.setuptools.package-data]
memlayer = ["ui/*.html"]
echo_journal = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
